<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YunGameGL</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
	<string name="welcome_hello">Hello,Welcome To Login</string>  
    <string name="username">username</string>  
    <string name="password">password</string>  
    <string name="login">login</string>  
    <string name="reset">reset</string>  
    <string name="register">register</string>  
    <string name="information">congratulation!</string>
    <string name="errorpage">Unknown User</string>    
    <string name="success_info">Hello Android Developer,You ID Is</string>  
    <string name="error_back">BACK</string>  
    <string name="back">BACK</string>  
    <string name="exit">Exit</string>  

</resources>